# rust-html-parser

./: .gitignore  Cargo.toml  README.md
glossary/: bert-dict.json
glossary/corporations/: fortune500.json
glossary/geography/: countries.json
glossary/humans/: richpeople.json
python/: create_bert_ner_dict.py  nlu_service.py  tag.py
src/: main.rs  nlu.rs  parser.rs  printer.rs
src/nlu/: glossary.rs  librarian.rs  mod.rs
