[package]
name = "tgnews"
version = "0.3.1"
authors = ["Danila Plee <fiend.of.sound@gmail.com>"]
edition = "2018"

[dependencies]

whatlang = "0.7.2"
select = "0.4.3"
futures = "0.3.1"
tendril = "0.4.1"
chrono = "0.4.8"
redis = "0.13.0"
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
clap = "2.33.0"
serde_json = "1.0"