[package]
name = "tgnews"
version = "0.3.1"
authors = ["Danila Plee <fiend.of.sound@gmail.com>"]
edition = "2018"

[dependencies]

whatlang = "0.7.2"
select = "0.4.3"
futures = "0.3.1"
tendril = "0.4.1"
chrono = "0.4.8"
redis = "0.13.0"
clap = "2.33.0"
serde_json = "1.0"
json = "*"
path-clean = "0.1.0"
fuzzy-matcher = "0.2.1"
packer = "0.5"