[package]
name = "tgnews"
version = "0.5.2"
authors = ["Danila Plee <fiend.of.sound@gmail.com>"]
edition = "2018"

[dependencies]

whatlang = "0.7.2"
select = "0.4.3"
futures = "0.3.1"
tendril = "0.4.1"
chrono = "0.4.8"
redis = "0.13.0"
clap = "2.33.0"
serde_json = "1.0"
json = "*"
path-clean = "0.1.0"
fuzzy-matcher = "0.2.1"
packer = "0.4"
csv = "1.1"
tantivy = "0.10.3"
tempdir = "0.3.7"
threadpool = "1.7.1"
regex = "1.3.1"